--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 
 
-		<a class="github-fork-ribbon" href="https://github.com/nitishsai9/Vignan-result/" data-ribbon="Nitish Sai" title="Fork me on GitHub">GitHub</a>
+		<a class="github-fork-ribbon" href="https://github.com/nitishsai9/Vignan-result/" data-ribbon="by Nitish sai click here to Give 🌟" title="Fork me on GitHub">GitHub</a>
 
 		<div class="wrapper">
 		
