--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
 								<div class="form-holder active">
 					
-						            <input type="text"  placeholder="Subject 1       [O-D]" class="form-control" id="sub1" required>
+						            <input type="text"  placeholder="Subject 1       [O-D] upper Case Letters" class="form-control" id="sub1" required>
 								</div>
 								<div class="form-holder">
-									<input type="text" placeholder="Subject 2       [O-D]" class="form-control" id="sub2" required>
+									<input type="text" placeholder="Subject 2       [O-D]upper Case Letters" class="form-control" id="sub2" required>
 								</div>
 								<div class="form-holder">
-									<input type="text" placeholder="Subject 3        [O-D]" class="form-control" id="sub3" required>
+									<input type="text" placeholder="Subject 3        [O-D]upper Case Letters" class="form-control" id="sub3" required>
 								</div>
 								<div class="form-holder">
-									<input type="text" placeholder="Subject 4        [O-D]" class="form-control" id="sub4" required>
+									<input type="text" placeholder="Subject 4        [O-D]upper Case Letters" class="form-control" id="sub4" required>
 								</div>
 								<div class="form-holder">
-									<input type="text" placeholder="Subject 5        [O-D]" class="form-control" id="sub5" required>
+									<input type="text" placeholder="Subject 5        [O-D]upper Case Letters" class="form-control" id="sub5" required>
 								</div>
 							
 							</div>
