--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
 								<div class="form-holder active">
 					
-						            <input type="text"  placeholder="Subject 1       [O-D] upper Case Letters" class="form-control" id="sub1">
+						            <input type="text" pattern="[A-O]*"  placeholder="Subject 1       [O-D] upper Case Letters" class="form-control" id="sub1">
 								</div>
 								<div class="form-holder">
-									<input type="text" placeholder="Subject 2       [O-D]upper Case Letters" class="form-control" id="sub2">
+									<input type="text"  pattern="[A-O]*"  placeholder="Subject 2       [O-D]upper Case Letters" class="form-control" id="sub2">
 								</div>
 								<div class="form-holder">
-									<input type="text" placeholder="Subject 3        [O-D]upper Case Letters" class="form-control" id="sub3">
+									<input type="text"  pattern="[A-O]*"  placeholder="Subject 3        [O-D]upper Case Letters" class="form-control" id="sub3">
 								</div>
 								<div class="form-holder">
-									<input type="text" placeholder="Subject 4        [O-D]upper Case Letters" class="form-control" id="sub4">
+									<input type="text"  pattern="[A-O]*"  placeholder="Subject 4        [O-D]upper Case Letters" class="form-control" id="sub4">
 								</div>
 								<div class="form-holder">
-									<input type="text" placeholder="Subject 5        [O-D]upper Case Letters" class="form-control" id="sub5">
+									<input type="text"  pattern="[A-O]*"  placeholder="Subject 5        [O-D]upper Case Letters" class="form-control" id="sub5">
 								</div>
 							
 							</div>
