--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 								<div class="form-holder">
 									<input type="text" placeholder="Subject 5        [O-D]" class="form-control" id="sub5" >
 								</div>
+								<div class="form-holder">
+									<input type="text" placeholder="Subject 6        [O-D]" class="form-control" id="sub6" >
+								</div>
 							
 							</div>
 							
