--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									<input type="text" placeholder="Subject 5        [O-D]" class="form-control" id="sub5" >
 								</div>
 								<div class="form-holder">
-									<input type="text" placeholder="Subject 6        [O-D]" class="form-control" id="sub6" >
+									<input type="text" placeholder="Subject 6        [O-D]" class="form-control" id="sub6"  value="Z">
 								</div>
 							
 							</div>
@@ -66,7 +66,7 @@
 	                    </div>
 	                    <div class="form-row">
 	                    	<div class="form-holder">
-								<input type="text" placeholder="Lab 3  [O-D]" class="form-control" id="lab3">
+								<input type="text" placeholder="Lab 3  [O-D]" class="form-control" id="lab3" value="Z">
 							</div>
 						</div>
 						
